force-app/main/default/objects/Spiff__c/Spiff__c.object-meta.xml
<CustomObject>
    <label>Spiff</label>
    <nameField>
        <displayFormat>SPF-{0000}</displayFormat>
        <label>Spiff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spiffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>