force-app/main/default/objects/Spiff__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date the spiff was earned. Set manually by Deal Desk</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>