force-app/main/default/objects/Spiff__c/fields/Include_in_Commission_TIers__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Commission_TIers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this spiff will count towards commission tiers.</description>
    <label>Include in Commission TIers</label>
    <type>Checkbox</type>
</CustomField>