force-app/main/default/objects/Spiff__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for spiff. Set manually by Deal Desk</description>
    <label>Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>